# Weather

./: .gitignore  Design.md  README.md  app.py  pyproject.toml
config/: network.json  settings.json
docs/superpowers/specs/: 2026-06-12-incident-timestamp-display-design.md
tests/: test_providers.py  test_risk.py  test_routes.py  test_time_display.py  test_viewport.py
weather_dashboard/: __init__.py  config.py  geo.py  map_view.py  models.py  risk.py  route_analysis.py  routes.py  time_display.py  ui.py  viewport.py
weather_dashboard/providers/: routing.py  traffic.py  weather.py
