[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-folium>=0.27.2",
]
